Changed to 2020 content

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -67,9 +67,9 @@
       <a class="item" id="about" href="#about">About</a>
       <a class="item" id="agenda" href="#agenda">Agenda</a>
       <a class="item" id="speakers" href="#speakers">Speakers</a>
-      <a class="item" id="pricing" href="#pricing">Pricing</a>
+      <!--<a class="item" id="pricing" href="#pricing">Pricing</a>-->
       <a class="item" id="partners" href="#partners">Partners</a>
-      <a class="item" id="arena" href="#arena">Arena</a>
+      <!--<a class="item" id="arena" href="#arena">Arena</a>-->
       <a class="item" id="venue" href="#venue">Details</a>
       <a class="item" id="contact">Contact</a>
     </div>
@@ -86,9 +86,9 @@
         <div class="item" id="about">About</div>
         <div class="item" id="agenda">Agenda</div>
         <div class="item" id="speakers">Speakers</div>
-        <div class="item" id="pricing">Pricing</div>
+        <!--<div class="item" id="pricing">Pricing</div>-->
         <div class="item" id="partners">Partners</div>
-        <div class="items" id="arena">Arena</div>
+        <!--<div class="items" id="arena">Arena</div>-->
         <div class="item" id="venue">Venue</div>
         <div class="item" id="contact">Contact</div>
       </div>
@@ -107,16 +107,16 @@
       <h1 class="ui header" id="eventVenue">NUS, Singapore</h1>
     </div>
     <div class="ui text detail container">
-      <h3>UNICON 2019 is a two–day conference that serves to unite international student entrepreneurs, prominent founders,
+      <h3>UNICON 2019 was a two–day conference that serves to unite international student entrepreneurs, prominent founders,
         industry experts and venture capitalists. Each year, outstanding young entrepreneurs from across Asia are gathered, challenged and inspired through our activities line-up.
-        Hurry and buy tickets for UNICON 2019!
+        Stay tuned for UNICON 2020!
       </h3>
     </div>
   </div>
 
     <div class="ui vertical agenda-section center aligned segment" id="agenda">
       <div class="ui text header container">
-        <h1 class="ui header">Agenda for 2019</h1>
+        <h1 class="ui header">UNICON 2019 Agenda</h1>
       </div>
 
       <div class="ui center aligned content grid container">
@@ -193,12 +193,12 @@
       </div>
     </div>
 
-    <div class="ui text description container">
-      <a href="https://drive.google.com/file/d/1CgaPKl7cB_rwk-apI2Y-EnqiO22-mv4g/view?usp=sharing" class="ui animated button" id="full-agenda">
-        <div class="visible content">View Full Agenda</div>
-        <div class="hidden content"><i class="list icon"></i></div>
-      </a>
-    </div>
+    <!--<div class="ui text description container">-->
+      <!--<a href="https://drive.google.com/file/d/1CgaPKl7cB_rwk-apI2Y-EnqiO22-mv4g/view?usp=sharing" class="ui animated button" id="full-agenda">-->
+        <!--<div class="visible content">View Full Agenda</div>-->
+        <!--<div class="hidden content"><i class="list icon"></i></div>-->
+      <!--</a>-->
+    <!--</div>-->
     <br>
     <div class="ui text description container">
       <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="ui animated button" id="video">
@@ -209,7 +209,7 @@
 
     <div class="ui vertical speakers-section center aligned segment" id="speakers">
       <div class="ui text header container">
-        <h1 class="ui header">Speakers for 2019</h1>
+        <h1 class="ui header">Past Speakers</h1>
       </div>
       <div class="ui middle aligned equal width grid detail container">
         <div class="eight wide mobile four wide tablet four wide computer column">
@@ -312,55 +312,55 @@
       <!--Present Speakers-->
     </div>
 
-      <div class="ui vertical pricing-section center aligned segment" id="pricing">
+      <!--<div class="ui vertical pricing-section center aligned segment" id="pricing">-->
 
-        <div class="ui text header container">
-          <h1 class="ui header">Pricing</h1>
-        </div>
+        <!--<div class="ui text header container">-->
+          <!--<h1 class="ui header">Past Pricing</h1>-->
+        <!--</div>-->
 
-        <div class="ui center aligned equal width content grid container">
-          <div class="sixteen wide mobile five wide tablet five wide computer column">
-            <div class="ui raised card">
-              <h2>Students</h2>
-              <h4>Currently enrolled in any University</h4>
-              <h1>S$50</h1>
-              <a class="eb"><h3>Early bird</h3></a>
-              <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" tabindex="0">
-                <div class="visible content"><h2>Register Now</h2></div>
-                <div class="hidden content"><i class="shopping cart icon"></i></div>
-              </a>
-            </div>
-          </div>
-          <div class="sixteen wide mobile five wide tablet five wide computer column">
-            <div class="ui raised card">
-              <h2>Recent Graduates</h2>
-              <h4>Class of 2016 Onwards</h4>
-              <h1>S$100</h1>
-              <a class="eb"><h3>Early bird</h3></a>
-              <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
-                <div class="visible content"><h2>Register Now</h2></div>
-                <div class="hidden content"><i class="shopping cart icon"></i></div>
-              </a>
-            </div>
-          </div>
-          <div class="sixteen wide mobile five wide tablet five wide computer column">
-            <div class="ui raised card">
-              <h2>Public</h2>
-              <h4>Open to all working adults</h4>
-              <h1>S$140</h1>
-              <a class="eb"><h3>Early bird</h3></a>
-              <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
-                <div class="visible content"><h2>Register Now</h2></div>
-                <div class="hidden content"><i class="shopping cart icon"></i></div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+        <!--<div class="ui center aligned equal width content grid container">-->
+          <!--<div class="sixteen wide mobile five wide tablet five wide computer column">-->
+            <!--<div class="ui raised card">-->
+              <!--<h2>Students</h2>-->
+              <!--<h4>Currently enrolled in any University</h4>-->
+              <!--<h1>S$50</h1>-->
+              <!--&lt;!&ndash;<a class="eb"><h3>Early bird</h3></a>&ndash;&gt;-->
+              <!--&lt;!&ndash;<a class="ui animated vertical button"  href="" tabindex="0">&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;<div class="visible content"><h2>Register Now</h2></div>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="hidden content"><i class="shopping cart icon"></i></div>&ndash;&gt;-->
+              <!--&lt;!&ndash;</a>&ndash;&gt;-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="sixteen wide mobile five wide tablet five wide computer column">-->
+            <!--<div class="ui raised card">-->
+              <!--<h2>Recent Graduates</h2>-->
+              <!--<h4>Class of 2016 Onwards</h4>-->
+              <!--<h1>S$100</h1>-->
+              <!--&lt;!&ndash;<a class="eb"><h3>Early bird</h3></a>&ndash;&gt;-->
+              <!--&lt;!&ndash;<a class="ui animated vertical button" href="">&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;<div class="visible content"><h2>Register Now</h2></div>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="hidden content"><i class="shopping cart icon"></i></div>&ndash;&gt;-->
+              <!--&lt;!&ndash;</a>&ndash;&gt;-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="sixteen wide mobile five wide tablet five wide computer column">-->
+            <!--<div class="ui raised card">-->
+              <!--<h2>Public</h2>-->
+              <!--<h4>Open to all working adults</h4>-->
+              <!--<h1>S$140</h1>-->
+              <!--<a class="eb"><h3>Early bird</h3></a>-->
+              <!--<a class="ui animated vertical button" href="">-->
+                <!--<div class="visible content"><h2>Register Now</h2></div>-->
+                <!--<div class="hidden content"><i class="shopping cart icon"></i></div>-->
+              <!--</a>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
 
   <div class="ui vertical partners-section center aligned segment" id="partners">
     <div class="ui text header container">
-      <h1 class="ui header">Key Sponsors for 2019</h1>
+      <h1 class="ui header">Past Sponsors</h1>
     </div>
     <div class="ui text description container">
       <h3>Industry-defining brands that have helped make UNICON into what it is today.
@@ -503,19 +503,19 @@
     </div>
   </div>
 
-  <a name="arena"></a>
-  <div class="ui vertical arena-section segment" id="arena">
-    <div class="ui text header container">
-      <h1 class="ui header">Arena</h1>
-    </div>
-    <div class="ui center aligned arena container">
-      <div class="centered image">
-        <img class="ui rounded image" src="/speakers_images/arena.jpg">
-        <h1 class="ui header">BRINGING YOUR START-UP IDEAS TO LIFE</h1>
-        <h1 class="ui header" id="arena_closed">Registration Period for UNICON Arena has Ended!</h1>
-      </div>
-    </div>
-  </div>
+  <!--<a name="arena"></a>-->
+  <!--<div class="ui vertical arena-section segment" id="arena">-->
+    <!--<div class="ui text header container">-->
+      <!--<h1 class="ui header">Arena</h1>-->
+    <!--</div>-->
+    <!--<div class="ui center aligned arena container">-->
+      <!--<div class="centered image">-->
+        <!--<img class="ui rounded image" src="/speakers_images/arena.jpg">-->
+        <!--<h1 class="ui header">BRINGING YOUR START-UP IDEAS TO LIFE</h1>-->
+        <!--<h1 class="ui header" id="arena_closed">Registration Period for UNICON Arena has Ended!</h1>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <div class="ui vertical venue-section segment" id="venue">
 
@@ -554,41 +554,43 @@
   </div>
 
   <div class="ui vertical contact-section segment">
-    <div class="ui text center aligned header container">
-      <h1 class="ui header">Want to volunteer?</h1>
+    <div class="ui text center aligned contact-header container">
+      <h1 class="ui header">Get in touch</h1>
+      <h3>Have some additional questions? Contact us at <a href="mailto:unicon@nes.org.sg?Subject=Hello%20UNICON2019" target="_top">unicon@nes.org.sg</a></h3>
     </div>
+    <!--<div class="ui text center aligned header container">-->
+      <!--<h1 class="ui header">Want to volunteer?</h1>-->
+    <!--</div>-->
 
-    <div class="ui text center aligned update container">
-      <h3>Fill up the application form below!</h3>
-      <br>
-      <form id="gform" class = "ui form" method="POST" action="https://script.google.com/macros/s/AKfycbw-bzZ2jh-hguRldI2lTo4h6wMO5KIfnypWKvkHdOn6Xfm_Xg/exec">
-        <div class="field">
-          <label><h3><b>Full Name:</b></h3></label>
-          <input type="text" name="name" placeholder="Name" required="required">
-        </div>
-        <div class="field">
-          <label><h3><b>Contact Number(Singapore Only):</b></h3></label>
-          <input type="number" name="phno" placeholder="Handphone Number" required="required">
-          <br><br><br>
-          <label><h4>Note: we will be using your contact no for communication purposes (via WhatsApp)!</h4></label>
-        </div>
-        <br>
-        <button class="ui animated button" type="submit">
-          <div class="visible content"><h2>Submit</h2></div>
-          <div class="hidden content"><i class="check icon"></i></div>
-        </button>
-      </form>
-      <div style="display:none;" id="thankyou_message">
-        <h2>Thanks! We will update you soon.</h2>
-      </div>
-</div>
-
-<div class="ui text center aligned contact-header container">
-  <h1 class="ui header">Get in touch</h1>
+    <!--<div class="ui text center aligned update container">-->
+      <!--<h3>Fill up the application form below!</h3>-->
+      <!--<br>-->
+      <!--<form id="gform" class = "ui form" method="POST" action="https://script.google.com/macros/s/AKfycbw-bzZ2jh-hguRldI2lTo4h6wMO5KIfnypWKvkHdOn6Xfm_Xg/exec">-->
+        <!--<div class="field">-->
+          <!--<label><h3><b>Full Name:</b></h3></label>-->
+          <!--<input type="text" name="name" placeholder="Name" required="required">-->
+        <!--</div>-->
+        <!--<div class="field">-->
+          <!--<label><h3><b>Contact Number(Singapore Only):</b></h3></label>-->
+          <!--<input type="number" name="phno" placeholder="Handphone Number" required="required">-->
+          <!--<br><br><br>-->
+          <!--<label><h4>Note: we will be using your contact no for communication purposes (via WhatsApp)!</h4></label>-->
+        <!--</div>-->
+        <!--<br>-->
+        <!--<button class="ui animated button" type="submit">-->
+          <!--<div class="visible content"><h2>Submit</h2></div>-->
+          <!--<div class="hidden content"><i class="check icon"></i></div>-->
+        <!--</button>-->
+      <!--</form>-->
+      <!--<div style="display:none;" id="thankyou_message">-->
+        <!--<h2>Thanks! We will update you soon.</h2>-->
+      <!--</div>-->
+    <!--</div>-->
+  </div>
 </div>
 
 <div class="ui text center aligned description container">
-  <h3>Have some additional questions? Contact us at <a href="mailto:unicon@nes.org.sg?Subject=Hello%20UNICON2019" target="_top">unicon@nes.org.sg</a></h3>
+  <br>
 </div>
 
 </div>
@@ -596,7 +598,7 @@
 <div class="ui inverted vertical footer segment">
   <div class="ui stackable inverted grid">
     <div class="four wide column" id="logo">
-      <h4 class="ui inverted header">©UNICON 2019</h4>
+      <h4 class="ui inverted header">©UNICON 2020</h4>
     </div>
     <div class="eight wide column" id="comment">
       <div class="ui text container">
