changed the event date that was missed

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -123,7 +123,7 @@
 <!--About Section-->
 <div class="ui vertical about-section center aligned segment" id="about">
     <div class="ui text header container">
-        <h1 class="ui header" id="eventDate">Feb 23rd - 24th 2019</h1>
+        <h1 class="ui header" id="eventDate">Feb 22nd - 23rd 2020</h1>
         <h1 class="ui header" id="eventVenue">NUS, Singapore</h1>
     </div>
     <div class="ui text detail container">
@@ -797,7 +797,7 @@
                     </div>
                     <div class="sixteen wide mobile sixteen wide tablet eight wide computer column" id="location">
                         <div class="ui center aligned location text">
-                            <h2>Feb 23 - 24, 2019</h2>
+                            <h2>Feb 22 - 23, 2020</h2>
                             <h2>University Town</h2>
                             <h2>NUS, Singapore</h2>
                         </div>
