Added IMDA link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -637,14 +637,13 @@
 
             <div class="ui center aligned equal width grid primary detail container">
                 <div class="eight wide mobile four wide tablet four wide computer column">
-                    <img class="ui image" src="/speakers_images/imda.jpg">
+                    <a href="https://www2.imda.gov.sg/"><img class="ui image" src="/speakers_images/imda.jpg"></a>
                 </div>
                 <div class="eight wide mobile four wide tablet four wide computer column">
                     <img class="ui image" src="/speakers_images/tesa.jpg">
                 </div>
                 <div class="eight wide mobile four wide tablet four wide computer column">
                     <a href="https://www.upcodeacademy.com/"><img class="ui image" src="/speakers_images/ua.png"></a>
-
                 </div>
                 <div class="eight wide mobile four wide tablet four wide computer column">
                     <img class="ui image" src="/speakers_images/xmd.jpg">
