--- a/views/main.ejs
+++ b/views/main.ejs
@@ -81,7 +81,7 @@
         <!--<a class="item" id="agenda" href="#agenda">Agenda</a>-->
         <a class="item" id="speakers">2019 Speakers</a>
         <a class="item" id="2018speakersNav">2018 Speakers</a>
-        <!--<a class="item" id="pricing" href="#pricing">Pricing</a>-->
+        <a class="item" id="pricing" href="#pricing">Pricing</a>
         <a class="item" id="partners" href="#partners">Partners</a>
         <!--<a class="item" id="arena" href="#arena">Arena</a>-->
         <a class="item" id="venue" href="#venue">Details</a>
@@ -103,7 +103,7 @@
             <div class="item" id="speakers">2019 Speakers</div>
             <!--<div class="item" id="agenda">2018 Speakers</div>-->
             <div class="item" id="2018SpeakersNav">2018 Speakers</div>
-            <!--<div class="item" id="pricing">Pricing</div>-->
+            <div class="item" id="pricing">Pricing</div>
             <div class="item" id="partners">Partners</div>
             <!--<div class="items" id="arena">Arena</div>-->
             <div class="item" id="venue">Venue</div>
@@ -579,51 +579,35 @@
         </div>
 
         <!--Pricing Section-->
-        <!--<div class="ui vertical pricing-section center aligned segment" id="pricing">-->
-
-        <!--<div class="ui text header container">-->
-        <!--<h1 class="ui header">Past Pricing</h1>-->
-        <!--</div>-->
-
-        <!--<div class="ui center aligned equal width content grid container">-->
-        <!--<div class="sixteen wide mobile five wide tablet five wide computer column">-->
-        <!--<div class="ui raised card">-->
-        <!--<h2>Students</h2>-->
-        <!--<h4>Currently enrolled in any University</h4>-->
-        <!--<h1>S$50</h1>-->
-        <!--&lt;!&ndash;<a class="eb"><h3>Early bird</h3></a>&ndash;&gt;-->
-        <!--&lt;!&ndash;<a class="ui animated vertical button"  href="" tabindex="0">&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash;<div class="visible content"><h2>Register Now</h2></div>&ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<div class="hidden content"><i class="shopping cart icon"></i></div>&ndash;&gt;-->
-        <!--&lt;!&ndash;</a>&ndash;&gt;-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--<div class="sixteen wide mobile five wide tablet five wide computer column">-->
-        <!--<div class="ui raised card">-->
-        <!--<h2>Recent Graduates</h2>-->
-        <!--<h4>Class of 2016 Onwards</h4>-->
-        <!--<h1>S$100</h1>-->
-        <!--&lt;!&ndash;<a class="eb"><h3>Early bird</h3></a>&ndash;&gt;-->
-        <!--&lt;!&ndash;<a class="ui animated vertical button" href="">&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash;<div class="visible content"><h2>Register Now</h2></div>&ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<div class="hidden content"><i class="shopping cart icon"></i></div>&ndash;&gt;-->
-        <!--&lt;!&ndash;</a>&ndash;&gt;-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--<div class="sixteen wide mobile five wide tablet five wide computer column">-->
-        <!--<div class="ui raised card">-->
-        <!--<h2>Public</h2>-->
-        <!--<h4>Open to all working adults</h4>-->
-        <!--<h1>S$140</h1>-->
-        <!--<a class="eb"><h3>Early bird</h3></a>-->
-        <!--<a class="ui animated vertical button" href="">-->
-        <!--<div class="visible content"><h2>Register Now</h2></div>-->
-        <!--<div class="hidden content"><i class="shopping cart icon"></i></div>-->
-        <!--</a>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
+        <div class="ui vertical pricing-section center aligned segment" id="pricing">
+            <div class="ui text header container">
+                <h1 class="ui header">Ticket Pricing</h1>
+            </div>
+            <div class="ui center aligned equal width content grid container">
+                <div class="sixteen wide mobile five wide tablet five wide computer column">
+                    <div class="ui raised card">
+                        <h2>Students</h2>
+                        <h4>Early Bird 20% Off</h4>
+                        <h1>S$31.20</h1>
+                        <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon2020-tickets-74661820515?aff=ebdssbeac" tabindex="0">
+                            <div class="visible content"><h2>Register Now</h2></div>
+                            <div class="hidden content"><i class="shopping cart icon"></i></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="sixteen wide mobile five wide tablet five wide computer column">
+                    <div class="ui raised card">
+                        <h2>Public</h2>
+                        <h4>Open to all working adults</h4>
+                        <h1>S$49.00</h1>
+                        <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon2020-tickets-74661820515?aff=ebdssbeac">
+                            <div class="visible content"><h2>Register Now</h2></div>
+                            <div class="hidden content"><i class="shopping cart icon"></i></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--Partner Section-->
         <div class="ui vertical partners-section center aligned segment" id="partners">
