changed title to 2020

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -19,7 +19,7 @@
     <meta name="description"
           content="Asia's first global entrepreneurship conference for students by students with the aim to connect student entrepreneurs all over the world and create a global network of innovators.">
     <meta name="google-site-verification" content="_XWasFf_fuvdHpZ1c8CP4t_NV4coS6uYbn9vKzuBiqg"/>
-    <title>Asia's craziest startup conference for students by students - UNICON 2019</title>
+    <title>Southeast Asia's largest & craziest student led conference - UNICON 2020</title>
     <link rel="icon" type="image/png" href="/speakers_images/favicon.png" sizes="48x48">
     <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
