--- a/views/main.ejs
+++ b/views/main.ejs
@@ -612,7 +612,7 @@
         <!--Partner Section-->
         <div class="ui vertical partners-section center aligned segment" id="partners">
             <div class="ui text header container">
-                <h1 class="ui header">Past Sponsors</h1>
+                <h1 class="ui header">Sponsors</h1>
             </div>
             <div class="ui text description container">
                 <h3>Industry-defining brands that have helped make UNICON into what it is today.
