--- a/views/main.ejs
+++ b/views/main.ejs
@@ -587,8 +587,8 @@
                 <div class="sixteen wide mobile five wide tablet five wide computer column">
                     <div class="ui raised card">
                         <h2>Students</h2>
-                        <h4>Early Bird 20% Off</h4>
-                        <h1>S$31.20</h1>
+                        <h4>Open to all universities</h4>
+                        <h1>S$39.00</h1>
                         <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon2020-tickets-74661820515?aff=ebdssbeac" tabindex="0">
                             <div class="visible content"><h2>Register Now</h2></div>
                             <div class="hidden content"><i class="shopping cart icon"></i></div>
